fixed few wrong font on medals container

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 }
 
 .custom-box {
-    background-color: #f8f9fa;
+    background-color: #fff;
     width: 1200px;
     height: 96.82px;
     border-radius: 30px;
